// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeForm should match the snapshot 1`] = `
<div>
  <h2
    className="welcome"
  >
    Welcome!
  </h2>
  <h3>
    This is 
    <span
      className="app-title"
    >
      African ♥ This App
    </span>
  </h3>
  <input
    className="input-name"
    name="name"
    onChange={[Function]}
    placeholder="Enter your name"
    type="text"
    value=""
  />
  <div
    className="div-welcome-page-buttons"
  >
    <NavBtn
      link="/study"
      text="Study"
    />
    <NavBtn
      link="/quiz"
      text="Quiz"
    />
  </div>
  <div
    className="div-welcome-info"
  >
    <section
      className="section-radio"
    >
      <h4
        className="title-welcome-info"
      >
        Why are you here 
        ?
      </h4>
      <input
        className="button-radio"
        id="bored"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="bored"
      >
        Bored
      </label>
      <input
        className="button-radio"
        id="egypt"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="egypt"
      >
        Found out Egypt was in Africa and it blew my mind
      </label>
      <input
        className="button-radio"
        id="learn"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="learn"
      >
        In college and wishing I could learn something I actually want to learn instead of my gen eds
      </label>
      <input
        className="button-radio"
        id="shame"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="shame"
      >
        Deeply ashamed of my lack of knowledge around World Geography and ready to change that
      </label>
    </section>
    <section
      className="section-instructions"
    >
      <h4
        className="title-welcome-info"
      >
        What can you do here?
      </h4>
      <ul
        className="list-instructions"
      >
        <li>
          Study the map of Africa to learn country names and capital cities
        </li>
        <li>
          Study and track learning with study cards for each country (with capital city and region)
        </li>
        <li>
          Search for a specific country card by country name
        </li>
        <li>
          Once a country and it's capital is commited to memory, click the 'Got It!' button to mark it as learned.
        </li>
        <li>
          Card status will reset upon any refresh to force you to practice - even the ones you've learned!
        </li>
        <li>
          Filter by 'Still Learning' cards, 'Got It' cards, or all cards
        </li>
      </ul>
    </section>
  </div>
</div>
`;

exports[`WelcomeForm should match the snapshot when user has entered their name 1`] = `
<div>
  <h2
    className="welcome"
  >
    Welcome!
  </h2>
  <h3>
    This is 
    <span
      className="app-title"
    >
      African ♥ This App
    </span>
  </h3>
  <input
    className="input-name"
    name="name"
    onChange={[Function]}
    placeholder="Enter your name"
    type="text"
    value="Ben"
  />
  <div
    className="div-welcome-page-buttons"
  >
    <NavBtn
      link="/study"
      text="Study"
    />
    <NavBtn
      link="/quiz"
      text="Quiz"
    />
  </div>
  <div
    className="div-welcome-info"
  >
    <section
      className="section-radio"
    >
      <h4
        className="title-welcome-info"
      >
        Why are you here 
        Ben
        ?
      </h4>
      <input
        className="button-radio"
        id="bored"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="bored"
      >
        Bored
      </label>
      <input
        className="button-radio"
        id="egypt"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="egypt"
      >
        Found out Egypt was in Africa and it blew my mind
      </label>
      <input
        className="button-radio"
        id="learn"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="learn"
      >
        In college and wishing I could learn something I actually want to learn instead of my gen eds
      </label>
      <input
        className="button-radio"
        id="shame"
        type="radio"
      />
      <label
        className="label-radio"
        forhtml="shame"
      >
        Deeply ashamed of my lack of knowledge around World Geography and ready to change that
      </label>
    </section>
    <section
      className="section-instructions"
    >
      <h4
        className="title-welcome-info"
      >
        What can you do here?
      </h4>
      <ul
        className="list-instructions"
      >
        <li>
          Study the map of Africa to learn country names and capital cities
        </li>
        <li>
          Study and track learning with study cards for each country (with capital city and region)
        </li>
        <li>
          Search for a specific country card by country name
        </li>
        <li>
          Once a country and it's capital is commited to memory, click the 'Got It!' button to mark it as learned.
        </li>
        <li>
          Card status will reset upon any refresh to force you to practice - even the ones you've learned!
        </li>
        <li>
          Filter by 'Still Learning' cards, 'Got It' cards, or all cards
        </li>
      </ul>
    </section>
  </div>
</div>
`;
